# belmoor

./: .clang-format  CMakeLists.txt  README.md  belmoor.jdebug
lib/: arm-none-eabi-gcc.cmake
lib/stm32-ssd1306/: CMakeLists.txt
lib/stm32-ssd1306/ssd1306/: ssd1306.c  ssd1306.h  ssd1306_conf.h  ssd1306_fonts.h
lib/stm32f072c8tx/: .mxproject  CMakeLists.txt  Makefile  STM32F072C8Tx_FLASH.ld  startup_stm32f072xb.s  stm32f072c8tx.gpdsc  stm32f072c8tx.ioc
lib/stm32f072c8tx/Core/Inc/: main.h  stm32f0xx_hal_conf.h  stm32f0xx_it.h
lib/stm32f072c8tx/Core/Src/: gpio.c  i2c.c  main.c  stm32f0xx_it.c  tim.c  usart.c
lib/stm32f072c8tx/Drivers/STM32F0xx_HAL_Driver/Inc/: stm32f0xx_hal_rcc.h  stm32f0xx_hal_rcc_ex.h
lib/stm32f072c8tx/Drivers/STM32F0xx_HAL_Driver/Src/: stm32f0xx_hal_flash_ex.c  stm32f0xx_hal_rcc_ex.c  stm32f0xx_ll_usb.c
lib/stm32f072c8tx/USB_DEVICE/App/: usbd_cdc_if.c  usbd_desc.c
pcb/: belmoor.lib
pcb/3d/: c-7-1415899-6-a-3d.stp
pcb/original/: PM1.05-cache.lib  PM1.05.sch  belmoor.dcm  sym-lib-table
src/: am2320.hpp  app.cpp  app.hpp  device.hpp  device_test.cpp  display.hpp  glue.cpp  gpio.hpp  m90e26.hpp  m90e26_test.cpp  nvm.cpp  nvm.hpp  nvm_test.cpp  pack.hpp  pack_test.cpp  print.hpp  relay.hpp  relay_test.cpp  spi.hpp  spi_test.cpp  sys_tick.hpp  test.cpp  usb.cpp  usb.hpp  usb_test.cpp  utils.hpp  utils_test.cpp
src/app/: dehumidifier_control.hpp
src/fake/: stm32f0xx_hal.h
src/test/: ssd1306.h  stm32f0xx_hal.h  stm32f0xx_hal_flash.h  stm32f0xx_hal_rcc.h  test.cpp  usbd_cdc_if.h
tools/: calibration_wizard.py
